--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="static/assets/css/fontawsom-all.min.css">
     <link rel="stylesheet" href="static/assets/plugins/grid-gallery/css/grid-gallery.min.css">
     <link rel="stylesheet" type="text/css" href="static/assets/css/style.css" />
+    <link href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' rel='stylesheet'>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css' rel='stylesheet'>
+    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 </head>
 
 <body>
@@ -164,5 +167,7 @@
 <script src="static/assets/plugins/grid-gallery/js/grid-gallery.min.js"></script>
 <script src="static/assets/plugins/scroll-fixed/jquery-scrolltofixed-min.js"></script>
 <script src="static/assets/js/script.js"></script>
-
+<script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js'></script>
+<script type='text/javascript' src=''></script>
+<script type='text/javascript' src=''></script>
 </html>
