--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>BBB</title>
+    <title>Bagadia Red Cross</title>
     <link rel="shortcut icon" href="static/static/assets/images/fav.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="static/assets/images/fav.jpg">
@@ -37,9 +37,7 @@
                                         <a class="nav-link" href="{{ url_for('index') }}">Home
                                         </a>
                                     </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="{{ url_for('about') }}">About Us</a>
-                                    </li>
+                                   
 
                                     <li class="nav-item">
                                         <a class="nav-link" href="{{ url_for('gallery') }}">Gallery</a>
@@ -90,7 +88,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
                         <div class="detail">
-                            <p>46-29 Indra Street, Southernbank, Tigaione, Toranto, 3006 Canada</p>
+                            <p>46-29 Xyz Street, Southeringn, Station road, Bredpur, India</p>
                         </div>
                     </div>
                     <div class="address-row">
@@ -98,7 +96,7 @@
                             <i class="far fa-envelope"></i>
                         </div>
                         <div class="detail">
-                            <p>sales@smarteyeapps.com <br> support@smarteyeapps.com</p>
+                            <p>contact@brc.com <br> support@brc.com</p>
                         </div>
                     </div>
                     <div class="address-row">
@@ -106,7 +104,7 @@
                             <i class="fas fa-phone"></i>
                         </div>
                         <div class="detail">
-                            <p>+91 9751791203 <br> +91 9159669599</p>
+                            <p>+91 0000000000 <br> +91 0000000000</p>
                         </div>
                     </div>
                 </div>
@@ -124,12 +122,12 @@
                         </ul>
                     </div>
                     <div class="row no-margin mt-1">
-                        <h2 class="m-t-2">More Products</h2>
+                        <h2 class="m-t-2">Helpline Numbers</h2>
                         <ul>
-                            <li>Forum PHP Script</li>
-                            <li>Edu Smart</li>
-                            <li>Smart Event</li>
-                            <li>Smart School</li>
+                            <li> <a href="tel:102" class="link-light">AMBULANCE 102</a></li>
+                            <li><a href="tel:100" class="link-light">POLICE 100</a></li>
+                            <li><a href="tel:101" class="link-light">FIRE 101</a></li>
+                            <li><a href="tel:1091" class="link-info">Women Helpline 1091</a></li>
 
 
                         </ul>
@@ -141,7 +139,7 @@
             <div class="footer-copy">
                 <div class="row">
                     <div class="col-lg-8 col-md-6">
-                        <p>Copyright © <a href="#">Ad</a> | All right reserved.</p>
+                        <p>Copyright © <a href="#">BRC</a> | All right reserved.</p>
                     </div>
                     <div class="col-lg-4 col-md-6 socila-link">
                         <ul>
