--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -991,3 +991,52 @@ p {
     width: 100%;
     object-fit: cover
 }
+
+
+/* option menu */
+
+select.basic {
+    width: 200px;
+    height: 35px;
+}
+
+select.simple {
+    background: #f5f5f5;
+    border: 0;
+}
+
+
+/* check box */
+
+.con {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+
+/* Hide the browser's default checkbox */
+
+.con input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+video {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
