--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,8 @@
             <div class="container">
                 <div class="row nav-row">
                     <div class="col-md-3 logo">
-                        <img src="static/assets/images/logo.jpg" alt="" link="{{ url_for('index')}}">
+                        <a href="{{ url_for('index')}}">
+                        <img src="static/assets/images/logo.jpg" alt="" >
                     </div>
                     <div class="col-md-9 nav-col">
                         <nav class="navbar navbar-expand-lg navbar-light">
@@ -40,23 +41,26 @@
                                    
 
                                     <li class="nav-item">
-                                        <a class="nav-link" href="{{ url_for('gallery') }}">Gallery</a>
+                                        <a class="nav-link" href="{{ url_for('index') }}">Gallery</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="{{ url_for('process') }}">Process</a>
+                                        <a class="nav-link" href="{{ url_for('index') }}">Process</a>
                                     </li>
 
                                     <li class="nav-item">
-                                        <a class="nav-link" href="{{ url_for('contactus') }}">Contact Us</a>
+                                        <a class="nav-link" href="{{url_for('index') }}">Contact Us</a>
                                     </li>
-                                    {% if session['username']  %}
+                                    {% if session['loggedin']  %}
                                     <li class="nav-item">
                                         <a class="nav-link" href="{{ url_for('profile') }}">Profile</a>
                                     </li>
                                     <li class="nav-item">
+                                        <a class="nav-link" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Blood Request</a>
+                                    </li>
+                                    <li class="nav-item">
                                         <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                                     </li>
-                                     {% endif %} {% if not session['username'] %}
+                                     {% endif %} {% if not session['loggedin'] %}
                                     <li class="nav-item">
                                         <a class="nav-link" href="{{ url_for('login') }}"> <i class="fas fa-user"></i>Login</a>
                                     </li>
@@ -73,6 +77,87 @@
         </div>
     </header>
 
+    
+    <!-- modal-->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <form action="/insert-donation" method="POST">
+          <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Registers for blood request</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+            
+                <div class="form-group">
+                  <label for="recipient-name" class="col-form-label">Recipient Name:*</label>
+                  <input type="text" required name="fullname" id="fullname"  class="form-control" >
+                </div>
+                <div class="form-group">
+                    <label class="fieldlabels">Select blood group: *</label>
+
+                    <select name="blood_group_id" id="blood_group_id" class="basic" style="display: block; position: static; margin-bottom: 5px; width: 100%; height: 40px; background: #FFFFFF; border:1px solid #CCCCCC;">
+                        <!-- <option selected>Open this select menu</option> -->
+                        {% for i in blood_group %}
+                        <option value="{{i['blood_group_id']}}">{{i['blood_group_name']}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                
+                <div class="form-group">
+                    <label class="fieldlabels">Select City: *</label> 
+                    <select name="city" id="city" lass="form-select" aria-label="Default select example" style="display: block; position: static; margin-bottom: 5px; width: 100%; height: 40px; background: #FFFFFF; border:1px solid #CCCCCC;">
+                         <option selected value="Mumbai" >Mumbai</option> 
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <label for="recipient-name" class="col-form-label">Contact:*</label>
+                    <input type="number" onkeydown="return event.keyCode !== 69" class="form-control" required name="contact" id="contact">
+                  </div>
+                  <div class="form-group">
+                    <label for="recipient-name" class="col-form-label">Blood Qty (ml):*</label>
+                    <input type="number" onkeydown="return event.keyCode !== 69" class="form-control" required name="blood_qty" id="blood_qty">
+                  </div>
+                         
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-danger">Confirm</button>
+            </div>
+          </div>
+          </form>
+        </div>
+      </div>
+      
+    <!-- modal-->
+
+
+    <!--modal-->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">Before you donate blood follow instructions</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+            You must eligible for basic requirements You are aged between 18 and 65.You weigh at least 50 kg.You must be in good health at the time you donate.
+            <br/>
+            <strong>You have to visite our B.R.C. Hospital by given date </strong>
+            </div>
+            <div class="modal-footer">
+                
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary" data-dismiss="modal">Proceed</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!--modal-->
 
     {% block body %} {% endblock body %}
 
@@ -88,7 +173,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
                         <div class="detail">
-                            <p>46-29 Xyz Street, Southeringn, Station road, Bredpur, India</p>
+                            <p>46 Building B/h John St.Street,Opp. Southnest pool,Mumbai, India</p>
                         </div>
                     </div>
                     <div class="address-row">
