--- a/templates/login.html
+++ b/templates/login.html
@@ -8,8 +8,7 @@
             </div>
             {% with messages = get_flashed_messages() %} {% if messages %}
             <div class="alert alert-danger" role="alert">
-                {{ messages[0] }}. Go to <a href="{{ url_for('login') }}">login page</a>.
-            </div>
+                {{ messages[0] }}</div>
             {% endif %} {% endwith %}
 
 
@@ -18,15 +17,15 @@
                 <div class="form-card">
                     <div class="form-group">
                         <label class="fieldlabels">Email address</label>
-                        <input type="text" name="email" id="email" placeholder="Enter Email Address" required class="form-control">
+                        <input type="text" name="email"  id="email" placeholder="Enter Email Address" class="form-control"  required />
                     </div>
                     <div class="form-group">
-                        <label class="fieldlabels">Password</label><input type="password" name="password" id="password" placeholder="Enter Password" required class="form-control">
+                        <label class="fieldlabels">Password</label><input  type="password" name="password" id="password" placeholder="Enter Password" class="form-control" required />
                     </div>
 
 
 
-                    <button class="btn btn-primary next action-button">Login</button>
+                    <button type="submit" class="btn btn-primary next action-button">Login</button>
 
                     <div class="form-body mt-4">
                         <div class="dropdown-divider"></div>
