--- a/templates/signup.html
+++ b/templates/signup.html
@@ -38,14 +38,14 @@
                                 </div>
                             </div>
                             <label class="fieldlabels">Email: *</label>
-                            <input type="email" id="email" name="email" placeholder="Email Id" />
+                            <input type="email" id="email" required name="email" placeholder="Email Id" />
 
 
                             <label class="fieldlabels">Password:
                                 *</label>
-                            <input type="password" name="password" onkeyup='check();' id="password" placeholder="Password" />
+                            <input type="password" name="password" required onkeyup='check();' id="password" placeholder="Password" />
                             <label class="fieldlabels">Confirm Password: *</label>
-                            <input type="password" onkeyup='check();' name="confirm_password" id="confirm_password" placeholder="Confirm Password" />
+                            <input type="password" required onkeyup='check();' name="confirm_password" id="confirm_password" placeholder="Confirm Password" />
                             <span id='message'></span>
                         </div> <input type="button" name="next" class="btn-sn btn-primary next action-button" value="Next" />
 
@@ -60,23 +60,26 @@
                                 <div class="col-5">
                                     <h2 class="steps">Step 2 - 4</h2>
                                 </div>
-                            </div> <label class="fieldlabels">Full Name: *</label> <input type="text" name="fullname" id="fullname" placeholder="Full Name" />
+                            </div> <label class="fieldlabels">Full Name: *</label> <input  required type="text" name="fullname" id="fullname" placeholder="Full Name" />
                             <label class="fieldlabels">Contact No.: *
-                            </label> <input type="number" onkeydown="return event.keyCode !== 69" name="phone_no" id="phone_no" placeholder="Contact No." />
+                            </label> <input type="number" required onkeydown="return event.keyCode !== 69" name="phone_no" id="phone_no" placeholder="Contact No." />
                             <label class="fieldlabels">Select blood group: *</label>
 
-
-                            <select name="blood_group_id" id="blood_group_id" class="form-select form-select-lg mb-3">
+                            <select name="blood_group_id" id="blood_group_id" class="form-select" aria-label="Default select example" style="display: block; position: static; margin-bottom: 5px; width: 100%; height: 40px; background: #ECEFF1; border:1px solid #CCCCCC;">
                                 <!-- <option selected>Open this select menu</option> -->
                                 {% for i in blood_group %}
                                 <option value="{{i['blood_group_id']}}">{{i['blood_group_name']}}</option>
                                 {% endfor %}
                             </select>
                             <br />
-                            <label class="fieldlabels">City: *</label> <input type="text" name="city" id="city" placeholder="Enter City" />
+                            <label class="fieldlabels">Select City: *</label> 
+                            <select name="city" id="city" lass="form-select" aria-label="Default select example" style="display: block; position: static; margin-bottom: 5px; width: 100%; height: 40px; background: #ECEFF1; border:1px solid #CCCCCC;">
+                                 <option selected value="Mumbai" >Mumbai</option> 
+                            </select>
+                            
 
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" checked id="is_donor" name="is_donor" />
+                            <div class="form-check mt-4">
+                                <input class="form-check-input" type="checkbox" checked id="is_donor" name="is_donor" style="font: inherit; color: currentColor; width: 1.15em; height: 1.15em; border: 0.15em solid currentColor; border-radius: 0.15em; transform: translateY(-0.075em);" />
                                 <label class="form-check-label" for="flexCheckIndeterminate">
                                     Registers as donor
                                 </label>
